[gd_scene load_steps=10 format=2]

[ext_resource path="res://Enemy/Snake_Man.png" type="Texture" id=1]
[ext_resource path="res://Enemy/Snake_Man.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11.1762, 28.5012 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13.5959, 25.0311 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 14.6801
height = 37.605

[sub_resource type="Animation" id=4]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("FlipHelper/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17, 18, 19, 20 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FlipHelper/Sprite/Attack_Reach/AttackReach:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=5]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("FlipHelper/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 21, 22, 23 ]
}

[sub_resource type="Animation" id=6]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("FlipHelper/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=7]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("FlipHelper/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13, 14 ]
}

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="FlipHelper" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="FlipHelper"]
texture = ExtResource( 1 )
hframes = 24
frame = 15

[node name="Attack_Reach" type="Area2D" parent="FlipHelper/Sprite"]

[node name="AttackReach" type="CollisionShape2D" parent="FlipHelper/Sprite/Attack_Reach"]
position = Vector2( 26.2791, 3.79588 )
shape = SubResource( 1 )
disabled = true

[node name="AttackArea" type="Area2D" parent="FlipHelper"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FlipHelper/AttackArea"]
position = Vector2( 23.8593, 2.19652 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3.17772 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 4 )
anims/Hit = SubResource( 5 )
anims/Idle = SubResource( 6 )
anims/Run = SubResource( 7 )

[node name="DetectWallRight" type="RayCast2D" parent="."]
position = Vector2( 10, 0 )
enabled = true
cast_to = Vector2( 30, 0 )
collide_with_areas = true
collide_with_bodies = false

[node name="DetectWallLeft" type="RayCast2D" parent="."]
position = Vector2( -10, 0 )
enabled = true
cast_to = Vector2( -30, 0 )

[node name="DetectFloorRight" type="RayCast2D" parent="."]
position = Vector2( 8, 20 )
enabled = true
cast_to = Vector2( 0, 5 )

[node name="DetectFloorLeft" type="RayCast2D" parent="."]
position = Vector2( -8, 20 )
enabled = true
cast_to = Vector2( 0, 5 )

[node name="PlatformDetector" type="RayCast2D" parent="."]
position = Vector2( 0, 28 )
enabled = true
cast_to = Vector2( 0, 3 )
[connection signal="body_entered" from="FlipHelper/Sprite/Attack_Reach" to="." method="_attack"]
[connection signal="body_entered" from="FlipHelper/AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="body_exited" from="FlipHelper/AttackArea" to="." method="_on_AttackArea_body_exited"]
